# textra

./: .wrapr  CONTRIBUTING.md  Cargo.toml  bump.ps1  config.yaml  echo.js  ehnancement_plan.md  readme.md  text.text  textra.toml  upper.js  vis.html  vispo.html  visualizer.js
.github/workflows/: release.yml  rust.yml
assets/overlay/: index.html
assets/overlay/css/: styles.css
assets/overlay/js/: overlay.js
manifests/i/incredimo/textra/v2024.09.18.164358/: incredimo.textra.locale.en-US.yaml
old/: .gitignore  bump.ps1  readme.md  text.text
old/src/: lib.rs
old/v2024.09.18.164358/: incredimo.textra.installer.yaml  incredimo.textra.yaml
src/: config.rs  errors.rs  installer.rs  keyboard.rs  keyboard_api.rs  lib.rs  main.rs  parse.rs  parser.rs  state.rs  textra.pest  view.rs
textra/: bun.lockb  config.toml  package.json
textra/src/: index.html  main.js
textra/src-tauri/: Cargo.toml  tauri.conf.json
textra/src-tauri/capabilities/: default.json  desktop.json
textra/src-tauri/src/: config.rs  installer.rs  keyboard.rs  lib.rs  main.rs  mouse.rs  parser.rs  setup.rs  state.rs  tray.rs
