[package]
name = "textra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
boa_engine = "0.19.0"
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
directories = "5.0.1"
dirs = "5.0.1"
lazy_static = "1.5.0"
minimo = "0.5.12"
notify = "6.1.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
rdev = "0.5.3"
regex = "1.10.6"
serde = { version = "1.0.207", features = ["derive"] }
serde_yaml = "0.9.34"
threadpool = "1.8.1"
