[package]
name = "textra"
version = "0.1.73"
edition = "2021"
authors = ["incredimo <a@xo.rs>"]
description = "type less, write more"
license = "MIT"
repository = "https://github.com/incredimo/textra"

[[bin]]
name = "textra-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "textra-core"
path = "src/bin/core.rs"

[[bin]]
name = "textra-overlay"
path = "src/bin/overlay.rs"

[dependencies]
parking_lot = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
lazy_static = "1.4"
winapi = { version = "0.3", features = ["everything"] }
pest = "2.7"
pest_derive = "2.7"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
winreg = "0.51"
which = "5.0"
tempfile = "3.8"
minimo = "0.1"
web-view = "0.7"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.32", features = ["full"] }
interprocess = "1.2"
toml = "0.8"
notify = "6.0"
include_dir = "0.7"
base64 = "0.21"
async-trait = "0.1.88"
