[package]
name = "textra"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "textra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon" ] }
tauri-plugin-shell = "2.0.0"
serde_json = "1"
anyhow = "1.0.86"
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
dashmap = "6.0.1"
directories = "5.0.1"
dirs = "5.0.1"
lazy_static = "1.5.0"
minimo = "0.5.12"
nom = "7.1.3"
notify = "6.1.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
pest = "2.7.12"
pest_derive = "2.7.12"
rdev = { version = "0.5.3", features = ["serialize"] }
regex = "1.10.6"
ropey = "1.6.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_yaml = "0.9.34"
single-instance = "0.3.3"
tempfile = "3.12.0"
threadpool = "1.8.1"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
which = "6.0.3"
winapi = { version = "0.3.9", features = [
    "winuser",
    "winbase",
    "tlhelp32",
    "namedpipeapi",
    "wingdi",
    "dwmapi",
    "shellapi",
    "commctrl",
    "uxtheme",
    "processthreadsapi",
    "errhandlingapi",
    "winerror",
    "windowsx",
    "libloaderapi",
    "wincontypes",
    "consoleapi",
] }
winreg = "0.52.0"
tauri-plugin-clipboard-manager = "2.0.1"



[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
